K8S/article-np.yml
apiVersion: v1
kind: Service
metadata:
  name: pocketbook-articleservice-np
spec:
  type: NodePort
  selector:
    app: pocketbook-articleservice
  ports:
    - name: pocketbook-articleservice
      protocol: TCP
      port: 80
      targetPort: 80
