K8S/category-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbook-category-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: pocketbook-categoryservice
  template:
    metadata:
      labels:
        app: pocketbook-categoryservice
    spec:
      containers:
        - name: pocketbook-categoryservice
          image: truongkienan/pocketbook-categoryservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbook-category-clusterip
spec:
  type: ClusterIP
  selector:
    app: pocketbook-categoryservice          
  ports:
    - name: pocketbook-categoryservice
      protocol: TCP
      port: 80
      targetPort: 80
    - name: pocketbook-categorygrpc
      protocol: TCP
      port: 666
      targetPort: 666
