K8S/mssql-article-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbook-mssql-article-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketbook-mssql-article
  template:
    metadata:
      labels:
        app: pocketbook-mssql-article
    spec:
      containers:
        - name: pocketbook-mssql-article
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: pocketbook-mssql-article-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbook-mssql-article-clusterip
spec:
  type: ClusterIP
  selector:
    app: pocketbook-mssql-article
  ports:
  - name: pocketbook-mssql-article
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbook-mssql-article-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: pocketbook-mssql-article
  ports:
  - protocol: TCP
    port: 1436
    targetPort: 1433
