K8S/mssql-cate-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbook-mssql-category-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketbook-mssql-category
  template:
    metadata:
      labels:
        app: pocketbook-mssql-category
    spec:
      containers:
        - name: pocketbook-mssql-category
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: pocketbook-mssql-category-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbook-mssql-category-clusterip
spec:
  type: ClusterIP
  selector:
    app: pocketbook-mssql-category
  ports:
  - name: pocketbook-mssql-category
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbook-mssql-category-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: pocketbook-mssql-category
  ports:
  - protocol: TCP
    port: 1435
    targetPort: 1433
