K8S/rabbitmq-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbook-rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketbook-rabbitmq
  template:
    metadata:
      labels:
        app: pocketbook-rabbitmq
    spec:
      containers:
        - name: pocketbook-rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: rbmq-mgmt-port
            - containerPort: 5672
              name: rbmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbook-rabbitmq-clusterip
spec:
  type: ClusterIP
  selector:
    app: pocketbook-rabbitmq
  ports:
  - name: rbmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rbmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbook-rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: pocketbook-rabbitmq
  ports:
  - name: rbmq-mgmt-port
    protocol: TCP
    port: 15674
    targetPort: 15672
  - name: rbmq-msg-port
    protocol: TCP
    port: 5674
    targetPort: 5672
