K8S/redis-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbook-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketbook-redis
  template:
    metadata:
      labels:
        app: pocketbook-redis
    spec:
      containers:
        - name: pocketbook-redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbook-redis-clusterip
spec:
  type: ClusterIP
  selector:
    app: pocketbook-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbook-redis-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: pocketbook-redis
  ports:
    - protocol: TCP
      port: 6380
      targetPort: 6379
