K8S/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketbook-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: pocketbook.com
      http:
        paths:
          - path: /api/account
            pathType: Prefix
            backend:
              service:
                name: pocketbook-auth-clusterip
                port:
                  number: 80
                  
          - path: /api/category
            pathType: Prefix
            backend:
              service:
                name: pocketbook-category-clusterip
                port:
                  number: 80

          - path: /api/c/category
            pathType: Prefix
            backend:
              service:
                name: pocketbook-article-clusterip
                port:
                  number: 80
